[package]
name = "chunky_pmc"
version = "0.1.0"
edition = "2024"
authors = ["Pumpkin"]
description = "Chunky-style pregeneration plugin for Pumpkin"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../../pumpkin", default-features = false }
pumpkin-util = { path = "../../pumpkin-util" }
tokio = { version = "1.49", default-features = false, features = ["rt", "sync", "time"] }
log = "0.4"
