[package]
name = "city_selector"
version = "0.1.0"
edition = "2024"
authors = ["AlbinoMC"]
description = "City Selector: compass menu to travel from lobby to city servers (Ratsku, Vatsku, Ratuskuu, AJkaz) via Velocity proxy"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../../pumpkin", default-features = false }
pumpkin-protocol = { path = "../../pumpkin-protocol" }
pumpkin-util = { path = "../../pumpkin-util" }
pumpkin-data = { path = "../../pumpkin-data" }
pumpkin-world = { path = "../../pumpkin-world" }
pumpkin-inventory = { path = "../../pumpkin-inventory" }
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "sync"] }
toml = "0.8"
uuid = { version = "1.20", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
