[package]
name = "force_save"
version = "0.1.0"
edition = "2024"
authors = ["Pumpkin"]
description = "Pumpkin plugin: force-save world and player data with /save"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../../pumpkin", default-features = false }
pumpkin-util = { path = "../../pumpkin-util" }
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "sync"] }
log = "0.4"
