[package]
name = "wordguardpmc"
version = "0.1.0"
edition = "2024"
authors = ["WordGuardPMC"]
description = "WorldGuard-like region protection for Pumpkin: guard areas, build permissions, flags"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../../pumpkin", default-features = false }
pumpkin-api-macros = { path = "../../pumpkin-api-macros" }
pumpkin-util = { path = "../../pumpkin-util" }
pumpkin-data = { path = "../../pumpkin-data" }
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "sync"] }
uuid = { version = "1.20", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
